JAXB modules are using to be deleted Java APIs (#1463)
* https://github.com/eclipse-ee4j/jaxb-ri/issues/1461

Signed-off-by: Steve Davidson <steve@j2eeguys.com>

Co-authored-by: Sanddust <sanddust@j2eeguys.com>
Co-authored-by: Honor Systems Updater Jenkins <hsujenkins@j2eeguys.com>
(cherry picked from commit 68035261ec1ec37f5794eb19239cbd698e2a9293)